Fixed nav bar, home alignment and font size

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -5,6 +5,12 @@
 	letter-spacing: 0;
 }
 
+@media(min-width: 1366px) {
+	html {
+		font-size: 87.5%;
+	}
+}
+
 @media(max-width: 1366px) {
 	html {
 		font-size: 75%;
